# shopping-list-app-yew

./: .gitignore  Cargo.toml  README.md  index.html  manifest.json  netlify.toml  output.css  package.json  tailwind.config.js
src/: entry.rs  listitem.rs  main.rs
src/components/: icons.rs  itemlist.rs  mod.rs
