[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"
log = "0.4.6"
wasm-logger = "0.2.0"
web-sys = {version = "0.3.61", features = ["Storage", "Window"]}
yew = { version = "0.20.0", features = ["csr"] }
serde_json = "1.0.96"
serde = "1.0.160"
